<resources>
    <string name="app_name">Series Tracker</string>
    <string name="default_espisode_name">O Último sussurro</string>
    <string name="episodeTime">00/00/0000 at 00:00</string>
    <string name="episodeDescription">The last Hope \n\n The last Hope \n\n The last Hope \n\n The last Hope \n\n The last Hope \n\n The last Hope</string>
    <string name="episodeMainImageDes">contains the picture of the show</string>
    <string name="overlayDescription">overlay image</string>
    <string name="summary">SUMMARY</string>
    <string name="genres">GENRES</string>
    <string name="details">DETAILS</string>
    <string name="language">Language: </string>
    <string name="status">Status: </string>
    <string name="episodesShow">Episodes: </string>
    <string name="startedIn">Started in: </string>
    <string name="country">Country: </string>
    <string name="homepage">Homepage: </string>
    <string name="clockDescription">clock image</string>
    <string name="title_activity_season_details">SeasonDetailsActivity</string>
    <string name="ended">Ended</string>
    <string name="episodes">Episodes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="favorite_header_message">Favourited Shows</string>
    <string name="title_activity_base_navigation_toolbar_activity">
        base_navigation_toolbar_activity
    </string>
    <string name="title_activity_base_loading_activity">base_loading_activity</string>
    <string name="title_activity_show">show</string>
    <string name="title_activity_show_details">show_details</string>
    <string name="base_navigation_drawer_open">Open</string>
    <string name="base_navigation_drawer_close">Close</string>
    <string name="not_found_favorites_message">No shows found</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shows">ShowsActivity</string>
    <string name="title_activity_base_navigation_drawer">BaseNavigationDrawer</string>
    @string/episodeTime
</resources>
