<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_episode_header_height">

            <ImageView
                android:id="@+id/episodeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/episodeMainImageDes"
                android:scaleType="centerCrop"
                android:src="@drawable/highlight_placeholder" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/overlayDescription"
                android:scaleType="fitXY"
                android:src="@drawable/overlay" />

            <TextView
                android:id="@+id/episodeTitle"
                android:layout_width="@dimen/default_episode_name_width"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/episodeImage"
                android:layout_marginBottom="@dimen/default_episode_name_margin"
                android:layout_marginLeft="@dimen/default_episode_name_margin"
                android:text="@string/default_espisode_name"
                android:textColor="@color/default_textColor_first"
                android:textSize="@dimen/default_textSize_veryLarge" />

        </RelativeLayout>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="@dimen/default_episode_hour_height"
            android:layout_marginLeft="@dimen/card_content_margin"
            android:layout_marginRight="@dimen/card_content_margin"
            android:layout_marginTop="@dimen/card_content_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"


                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/clockDescription"
                    android:layout_marginLeft="@dimen/default_episode_clock_margin"
                    android:layout_marginTop="@dimen/default_episode_clock_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/episode_details_clock">


                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_episode_time_left_margin"
                    android:layout_marginTop="@dimen/default_episode_time_top_margin"
                    android:text="@string/episodeTime"
                    android:textColor="@color/default_color_first"
                    android:textSize="@dimen/default_textSize_medium"
                    android:id="@+id/episodeBeginTime"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            android:layout_marginLeft="@dimen/card_content_margin"
            android:layout_marginRight="@dimen/card_content_margin"
            android:layout_marginTop="@dimen/default_spacing_medium"
            card_view:cardCornerRadius="@dimen/card_cornerRadius"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/default_spacing_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_spacing_large"
                    android:layout_marginTop="@dimen/default_spacing_large"
                    android:text="@string/summary"
                    android:textColor="@color/default_color_third"
                    android:textSize="@dimen/default_textSize_verySmall"

                    />

                <View
                    android:layout_width="@dimen/default_episode_summary_line_width"
                    android:layout_height="@dimen/default_episode_summary_line_height"
                    android:layout_marginTop="@dimen/default_episode_summary_line_margin_top"
                    android:background="@color/default_background_third"
                    android:layout_marginRight="@dimen/default_episode_summary_line_margin_right" />

                <TextView
                    android:id="@+id/episodeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_episode_description_margin_bottom"
                    android:layout_marginRight="@dimen/default_spacing_large"
                    android:layout_marginTop="@dimen/default_episode_description_margin_top"
                    android:text="@string/episodeDescription"
                    android:textColor="@color/default_textColor_fourth"
                    android:textSize="@dimen/default_textSize_medium" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>
